# hydra

./: .gitignore  README.md  package.json
.moon/: toolchain.yml  workspace.yml
.moon/cache/: runReport.json
.moon/cache/states/: configSchemas.json  moonVersionCheck.json  projectsBuildData.json  setupToolchain-bun-latest.json  setupToolchain-system-global.json  workspaceGraph.json
.moon/cache/states/app/: snapshot.json
.moon/cache/states/compose-full/: snapshot.json
.moon/cache/states/core_types/: snapshot.json
.moon/cache/states/docker/: snapshot.json
docker/: compose.databases.yml  compose.odm.yml  compose.workflows.yml  moon.yml
hydra-hub/: moon.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
hydra-hub/prisma/: schema.prisma
hydra-hub/public/potree/: potree.js
hydra-hub/src/components/: dashboard-layout.tsx  data-asset-dialog.tsx  data-assets-table.tsx  dataset-dialog.tsx  dataset-query-dialog.tsx  datasets-table.tsx  feedback.tsx  page-header.tsx  run-workflow-dialog.tsx  stat-card.tsx  workflow-jobs-table.tsx
hydra-hub/src/config/: navigation.ts
hydra-hub/src/hooks/: usePrefectHooks.ts
hydra-hub/src/lib/: db.ts
hydra-hub/src/pages/: _app.tsx  _document.tsx  dashboard.tsx  datasets.tsx  files.tsx  index.tsx  point-cloud.tsx  workflow-jobs.tsx
hydra-hub/src/styles/: globals.css
hydra-hub/src/types/: data-asset.ts  workflow-job.ts
workflows/: hello.py  models  pyproject.toml
workflows/flows/: flow_ingest.py  flow_odm.py
workflows/tasks/: task_create_asset.py  tasks_gps.py  tasks_list_files.py  tasks_odm.py
(+109 files in other folders)
